<resources>
  <string name="app_name">Casebook</string>
  <string name="action_filter">Filter</string>
  <string name="action_complete">Complete</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_activity_filter">FilterActivity</string>
  <string name="date">Дата</string>
  <string name="case_type">Тип дела</string>
  <string name="assigned">Назначена</string>
  <string name="not_selected">Не выбрана</string>
  <string name="case_type_not_selected">Не выбран</string>
  <string name="not_assigned">Не назначена</string>
</resources>
